--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.58 2001/09/13 22:43:28 jon Exp $
+# $Id: TurbineResources.properties,v 1.59 2001/09/17 19:44:24 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -39,8 +39,8 @@ system.mail.smtp.from=
 # properties within our application configuration.
 #
 # NOTE:
-# The presence of ${webapp} in the logging configuration
-# is not a mistake. Internally the value of ${webapp}
+# The presence of ${applicationRoot} in the logging configuration
+# is not a mistake. Internally the value of ${applicationRoot}
 # is set so that you can use it with standard log4j
 # properties to get logs to appear in your
 # webapp space.
@@ -52,7 +52,7 @@ system.mail.smtp.from=
 
 log4j.category.default = DEBUG, default
 log4j.appender.default = org.apache.log4j.FileAppender
-log4j.appender.default.file = ${webapp}/logs/turbine.log
+log4j.appender.default.file = ${applicationRoot}/logs/turbine.log
 log4j.appender.default.layout = org.apache.log4j.PatternLayout
 log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.default.append = false
@@ -61,7 +61,7 @@ log4j.appender.default.append = false
 
 log4j.category.org.apache.torque = DEBUG, torque
 log4j.appender.torque = org.apache.log4j.FileAppender
-log4j.appender.torque.file = ${webapp}/logs/torque.log
+log4j.appender.torque.file = ${applicationRoot}/logs/torque.log
 log4j.appender.torque.layout = org.apache.log4j.PatternLayout
 log4j.appender.torque.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.torque.append = false
@@ -70,7 +70,7 @@ log4j.appender.torque.append = false
 
 log4j.category.org.apache.fulcrum = INFO, services
 log4j.appender.services = org.apache.log4j.FileAppender
-log4j.appender.services.file = ${webapp}/logs/services.log
+log4j.appender.services.file = ${applicationRoot}/logs/services.log
 log4j.appender.services.layout = org.apache.log4j.PatternLayout
 log4j.appender.services.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.services.append = false
