we want to start the scheduler now

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.59 2001/09/17 19:44:24 jon Exp $
+# $Id: TurbineResources.properties,v 1.60 2001/09/19 21:57:47 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -624,7 +624,7 @@ services.LocalizationService.locale.default.country=US
 #
 # Default = false
 #
-services.SchedulerService.earlyInit = false
+services.SchedulerService.earlyInit = true
 
 # -------------------------------------------------------------------
 # 
