it seems that if we attempt to early init the scheduler that it fails because torque is not initialized first.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.60 2001/09/19 21:57:47 jon Exp $
+# $Id: TurbineResources.properties,v 1.61 2001/09/19 22:00:55 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -624,7 +624,7 @@ services.LocalizationService.locale.default.country=US
 #
 # Default = false
 #
-services.SchedulerService.earlyInit = true
+services.SchedulerService.earlyInit = false
 
 # -------------------------------------------------------------------
 # 
