latest torque latest tomcat (with some fixes i made for classreloading)
i believe i have pretty much finished implementing the
GlobalAttributeEditor with regards to editing AttributeOptions. still need
to add the ability to create a new option, but it seems that the hard
parts are mostly over now.

there is a boat load of business logic behind the AO's and the
ROptionOption's...especially with regards to editing the data via the
webapp. i tried to document it in the code...still need to document it
further.

the caching schemes is a mess. i have some ideas on how we can clean it up
in the future (with events). for now, this is going to have to do.

--- a/src/conf/web.xml
+++ b/src/conf/web.xml
@@ -20,6 +20,10 @@
                 /WEB-INF/conf/TurbineResources.properties
             </param-value>
         </init-param>
+	
+        <!-- Load this servlet at server startup time -->
+        <load-on-startup>5</load-on-startup>
+
     </servlet>
 <!--
     <servlet>
