fixed db service to provide logging of sql queries separate from other services and updated TR.props to write the sql queries to the torque.log file
added new macro library for use in reports.

Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.61 2001/09/19 22:00:55 jon Exp $
+# $Id: TurbineResources.properties,v 1.62 2001/09/24 17:51:40 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -48,14 +48,20 @@ system.mail.smtp.from=
 
 # This first category is required and the category
 # must be named 'default'. This is used for all logging
-# where an explicit category is not specified.
+# where an explicit category is not specified (when using the Log
+# utility class).  It should be set to write to the same appender
+# as the org.apache.turbine category.
 
-log4j.category.default = DEBUG, default
-log4j.appender.default = org.apache.log4j.FileAppender
-log4j.appender.default.file = ${applicationRoot}/logs/turbine.log
-log4j.appender.default.layout = org.apache.log4j.PatternLayout
-log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
-log4j.appender.default.append = false
+log4j.category.default = DEBUG, turbine
+
+# This category is used by Turbine.
+
+log4j.category.org.apache.turbine = DEBUG, turbine
+log4j.appender.turbine = org.apache.log4j.FileAppender
+log4j.appender.turbine.file = ${applicationRoot}/logs/turbine.log
+log4j.appender.turbine.layout = org.apache.log4j.PatternLayout
+log4j.appender.turbine.layout.conversionPattern = %d [%t] %-5p %c - %m%n
+log4j.appender.turbine.append = false
 
 # This category is used by Torque.
 
@@ -74,6 +80,11 @@ log4j.appender.services.file = ${applicationRoot}/logs/services.log
 log4j.appender.services.layout = org.apache.log4j.PatternLayout
 log4j.appender.services.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.services.append = false
+
+# Setup the db service to use the same appender as torque
+
+log4j.category.org.apache.fulcrum.db = DEBUG, torque
+
 
 # -------------------------------------------------------------------
 # 
@@ -525,7 +536,7 @@ services.VelocityService.default.layout.template = /Default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
 #services.VelocityService.input.encoding=UTF-8
-services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,macros/GlobalMacros.vm,macros/ViewIssueMacro.vm,macros/AdvancedQueryMacro.vm 
+services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,macros/GlobalMacros.vm,macros/ViewIssueMacro.vm,macros/AdvancedQueryMacro.vm,macros/ReportMacro.vm 
 
 services.VelocityService.resource.loader = file
 services.VelocityService.file.resource.loader.description = Velocity File Resource Loader
