--- a/src/conf/TurbineResourcesTest.properties
+++ b/src/conf/TurbineResourcesTest.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResourcesTest.properties,v 1.1 2001/09/22 17:29:06 mumbly Exp $
+# $Id: TurbineResourcesTest.properties,v 1.2 2001/09/29 16:26:02 mumbly Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -39,8 +39,8 @@ system.mail.smtp.from=
 # properties within our application configuration.
 #
 # NOTE:
-# The presence of ${webapp} in the logging configuration
-# is not a mistake. Internally the value of ${webapp}
+# The presence of ${applicationRoot} in the logging configuration
+# is not a mistake. Internally the value of ${applicationRoot}
 # is set so that you can use it with standard log4j
 # properties to get logs to appear in your
 # webapp space.
@@ -48,20 +48,26 @@ system.mail.smtp.from=
 
 # This first category is required and the category
 # must be named 'default'. This is used for all logging
-# where an explicit category is not specified.
+# where an explicit category is not specified (when using the Log
+# utility class).  It should be set to write to the same appender
+# as the org.apache.turbine category.
 
-log4j.category.default = DEBUG, default
-log4j.appender.default = org.apache.log4j.FileAppender
-log4j.appender.default.file = ${webapp}/logs/turbine.log
-log4j.appender.default.layout = org.apache.log4j.PatternLayout
-log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
-log4j.appender.default.append = false
+log4j.category.default = DEBUG, turbine
+
+# This category is used by Turbine.
+
+log4j.category.org.apache.turbine = DEBUG, turbine
+log4j.appender.turbine = org.apache.log4j.FileAppender
+log4j.appender.turbine.file = ${applicationRoot}/logs/turbine.log
+log4j.appender.turbine.layout = org.apache.log4j.PatternLayout
+log4j.appender.turbine.layout.conversionPattern = %d [%t] %-5p %c - %m%n
+log4j.appender.turbine.append = false
 
 # This category is used by Torque.
 
 log4j.category.org.apache.torque = DEBUG, torque
 log4j.appender.torque = org.apache.log4j.FileAppender
-log4j.appender.torque.file = ${webapp}/logs/torque.log
+log4j.appender.torque.file = ${applicationRoot}/logs/torque.log
 log4j.appender.torque.layout = org.apache.log4j.PatternLayout
 log4j.appender.torque.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.torque.append = false
@@ -70,10 +76,15 @@ log4j.appender.torque.append = false
 
 log4j.category.org.apache.fulcrum = INFO, services
 log4j.appender.services = org.apache.log4j.FileAppender
-log4j.appender.services.file = ${webapp}/logs/services.log
+log4j.appender.services.file = ${applicationRoot}/logs/services.log
 log4j.appender.services.layout = org.apache.log4j.PatternLayout
 log4j.appender.services.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.services.append = false
+
+# Setup the db service to use the same appender as torque
+
+log4j.category.org.apache.fulcrum.db = DEBUG, torque
+
 
 # -------------------------------------------------------------------
 # 
@@ -525,7 +536,7 @@ services.VelocityService.default.layout.template = /Default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
 #services.VelocityService.input.encoding=UTF-8
-services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,macros/GlobalMacros.vm,macros/ViewIssueMacro.vm,macros/AdvancedQueryMacro.vm 
+services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,macros/GlobalMacros.vm,macros/ViewIssueMacro.vm,macros/AdvancedQueryMacro.vm,macros/ReportMacro.vm 
 
 services.VelocityService.resource.loader = file
 services.VelocityService.file.resource.loader.description = Velocity File Resource Loader
