modified the module process to remove the hard coded default module setting to 5. if a module # is not defined, then it will present the selectmodule screen before allowing you to continue. i'm sure that this will need some more fine tuning (for instance, the system needs to check if you have access to a module on each request), but it is working now.
also moved the admin,Approval.vm page to just Approval.vm

in the logout process, also unset the current module.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -41,6 +41,9 @@ services.ScarabModuleService.classname=org.tigris.scarab.services.module.ModuleS
 services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.ScarabModule
 services.UserService.classname=org.tigris.scarab.services.user.TurbineUserService
 
+# The page which is used to select the Module to use
+scarab.CurrentModuleTemplate=SelectModule.vm
+
 # Base permissions for Scarab Pages
 scarab.security.AssignIssue.vm=Issue | Edit
 scarab.security.entry.Wizard1.vm=Issue | Enter
@@ -52,7 +55,7 @@ scarab.security.admin.GlobalAttributeEdit.vm=Domain | Edit
 #scarab.security.admin.AttributeShow.vm=Module | Edit
 #scarab.security.admin.AttributeEdit.vm=Module | Edit
 #scarab.security.admin.ModuleAttributeEditor.vm=Module | Edit
-scarab.security.admin.Approval.vm=Item | Approve
+scarab.security.Approval.vm=Item | Approve
 scarab.security.MoveIssue.vm=Issue | Edit
 scarab.security.MoveIssue2.vm=Issue | Edit
 scarab.security.SaveQuery.vm=User | Edit Preferences
