--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -61,3 +61,4 @@ scarab.security.MoveIssue2.vm=Issue | Edit
 scarab.security.SaveQuery.vm=User | Edit Preferences
 scarab.security.SaveTemplate.vm=User | Edit Preferences
 scarab.security.ConfigureIssueList.vm=User | Edit Preferences
+scarab.security.AdvancedQuery.vm=Issue | Enter
