--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -62,3 +62,4 @@ scarab.security.SaveQuery.vm=User | Edit Preferences
 scarab.security.SaveTemplate.vm=User | Edit Preferences
 scarab.security.ConfigureIssueList.vm=User | Edit Preferences
 scarab.security.AdvancedQuery.vm=Issue | Enter
+scarab.security.QueryList.vm=Issue | Enter
