added an Issue | View permission
minor cleanup

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -64,3 +64,4 @@ scarab.security.ConfigureIssueList.vm=User | Edit Preferences
 scarab.security.Search.vm=Issue | Search
 scarab.security.AdvancedQuery.vm=Issue | Search
 scarab.security.QueryList.vm=Issue | Search
+scarab.security.ViewIssue.vm=Issue | View
