added IssueList to the properties file for permission checking.
more cleanup and html fixes. no functional changes

-jon

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -65,3 +65,4 @@ scarab.security.Search.vm=Issue | Search
 scarab.security.AdvancedQuery.vm=Issue | Search
 scarab.security.QueryList.vm=Issue | Search
 scarab.security.ViewIssue.vm=Issue | View
+scarab.security.IssueList.vm=Issue | Search
