--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -65,4 +65,5 @@ scarab.security.Search.vm=Issue | Search
 scarab.security.AdvancedQuery.vm=Issue | Search
 scarab.security.QueryList.vm=Issue | Search
 scarab.security.ViewIssue.vm=Issue | View
+scarab.security.reports.Step1.vm=Issue | Search
 scarab.security.IssueList.vm=Issue | Search
