- Improved error reporting in xml/DOMConfigurator.java
- fixed compatibility issue in log4j.dtd

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/xml/Makefile
+++ b/src/java/org/apache/log4j/xml/Makefile
@@ -3,7 +3,7 @@ PKG_DIR :=org/apache/log4j/xml
 DEPTH   :=../../../../../..
 JSOURCES:=DOMConfigurator.java\
 	XMLLayout.java\
-
+        SAXErrorHandler.java\
 
 SUBDIRS := examples test
 
