--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -25,6 +25,7 @@ services.PullService.tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestT
 services.PullService.tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
 services.PullService.tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurityPull
 services.PullService.tool.global.format=org.tigris.scarab.tools.Format
+services.PullService.tool.global.l10n=org.apache.turbine.tool.LocalizationTool
 
 # This name will be used to distinguish specific scarab application
 # from other instances that it may interact with (in the future).
