--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.62 2001/09/24 17:51:40 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.63 2001/10/08 20:02:05 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -303,7 +303,7 @@ services.GlobalCacheService.classname=org.apache.fulcrum.cache.TurbineGlobalCach
 services.TemplateService.classname=org.apache.fulcrum.template.TurbineTemplateService
 
 services.RunDataService.classname=org.apache.turbine.services.rundata.TurbineRunDataService
-services.LocalizationService.classname=org.apache.turbine.services.localization.TurbineLocalizationService
+services.LocalizationService.classname=org.apache.fulcrum.localization.TurbineLocalizationService
 services.PullService.classname=org.apache.turbine.services.pull.TurbinePullService
 services.IntakeService.classname=org.apache.fulcrum.intake.TurbineIntakeService
 
@@ -590,7 +590,7 @@ services.UploadService.size.threshold=1048576
 # Default ResourceBundle and language/country codes used by the
 # TurbineLocalizationService.
 #
-services.LocalizationService.locale.default.bundle=MyBundle
+services.LocalizationService.locale.default.bundle=ScarabBundle
 services.LocalizationService.locale.default.language=en
 services.LocalizationService.locale.default.country=US
 
