--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 <!--                                                                        -->
 <!-- ====================================================================== -->
 
-<!-- $Id: build.xml,v 1.34 2001/10/08 01:38:12 schaefera Exp $ -->
+<!-- $Id: build.xml,v 1.35 2001/10/09 00:59:38 olegnitz Exp $ -->
 
 <project default="main" name="JBoss/Server">
 
@@ -585,6 +585,7 @@ os.version:      ${os.version}
         <include name="org/jboss/ejb/plugins/jrmp12/interfaces/**"/>
         <include name="org/jboss/ejb/plugins/jrmp13/interfaces/**"/>
         <include name="org/jboss/ejb/CacheKey.class"/>
+        <include name="org/jboss/ejb/ListCacheKey.class"/>
         <include name="org/jboss/ejb/FastKey.class"/>
         <include name="org/jboss/monitor/client/*.class"/>
         <include name="org/jboss/tm/TransactionPropagationContextFactory.class"/>
