added base permission for TemplateList.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -64,7 +64,8 @@ scarab.security.SaveTemplate.vm=User | Edit Preferences
 scarab.security.ConfigureIssueList.vm=User | Edit Preferences
 scarab.security.Search.vm=Issue | Search
 scarab.security.AdvancedQuery.vm=Issue | Search
-scarab.security.QueryList.vm=Issue | Search
+scarab.security.QueryList.vm=User | Edit Preferences
+scarab.security.TemplateList.vm=User | Edit Preferences
 scarab.security.ViewIssue.vm=Issue | View
 scarab.security.reports.Step1.vm=Issue | Search
 scarab.security.IssueList.vm=Issue | Search
